# taurus

./: Cargo.toml  README.md
annotation/: Cargo.toml
annotation/src/: lib.rs
attributes/: Cargo.toml
attributes/src/: lib.rs
auditor/: Cargo.toml
auditor/src/: analyzer.rs  annotated.rs  extractor.rs  lib.rs  main.rs  summaries.rs  utils.rs
src/: analyzer.rs  annotated.rs  extractor.rs  lib.rs  main.rs  summaries.rs  utils.rs
