[package]
name = "taurus"
version = "0.0.1"
authors = ["Pei Wang <wangpei10@baidu.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[[bin]]
name = "taurus"
path = "src/main.rs"

[dependencies]
log = "*"
rusqlite = { version = "*", feature = ["bundled"] }
env_logger = "*"
fs2 = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
petgraph = "*"
seahash = "*"

taurus-attributes = { path = "../attributes" }
taurus-annotation = { path = "../annotation" }


